update readme, project data in examples, add example plot

--- a/README.qmd
+++ b/README.qmd
@@ -34,7 +34,7 @@ This package provides some alternatives to sf functions, which are implemented u
 with a current focus on **areal-weighted interpolation** as a drop-in alternative to  
 `sf::st_interpolate_aw()` and `areal::aw_interpolate()`.
 
-Here are the speed boosts and memory savings you can expect:
+Here’s what you can expect for speed gains and memory savings (measured on projected planar data):
 
 ![](man/figures/vis-test-total.png)
 
@@ -55,7 +55,7 @@ pak::pak("e-kotov/ducksf")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to solve a common problem (following the [`sf` package's example](https://r-spatial.github.io/sf/reference/interpolate_aw.html) - our result will be a little different, as we project the data to NAD83 / Conus Albers (EPSG:5070)):
 
 ```{r example}
 ## Quick example (using the default `sf` dataset)
@@ -64,6 +64,8 @@ library(ducksf)
 
 # data & grid (from sf help)
 nc <- st_read(system.file("shape/nc.shp", package = "sf"), quiet = TRUE)
+# transform to NAD83 / Conus Albers (EPSG:5070)
+nc <- nc |> st_transform(5070)
 g <- st_make_grid(nc, n = c(10, 5)) # 'to' can be sfc for sf, but ducksf core needs an sf with an ID
 
 # Prepare IDs for ducksf core
@@ -104,6 +106,16 @@ a_show$extensive <- st_drop_geometry(a2_core)$BIR74
 plot(a_show[c("intensive", "extensive")], key.pos = 4)
 ```
 
+```{r}
+#| echo: FALSE
+png("man/figures/example-plot.png", width = 800, height = 400, units = "px")
+plot(a_show[c("intensive", "extensive")], key.pos = 4)
+dev.off()
+```
+
+![](man/figures/example-plot.png)
+
+
 ## Mask `{sf}` functions
 
 `{ducksf}` also provides a way to **mask `{sf}` functions** so that they dispatch to `{ducksf}` instead of `{sf}`. This is useful if you want to use `{sf}` functions with `{ducksf}` semantics without changing your code too much. By default it is of course disabled, so you can use `{sf}` functions as usual even if `{ducksf}` is loaded. The resulting numbers will be insignificantly different from `{sf}` results due to rounding errors, but they will be very close.
@@ -132,6 +144,8 @@ sf_use_ducksf(FALSE)
 
 
 ## To test speed on relatively large data
+
+*This data and code were used for the tests presented at the top of this README, but with `bench::mark()` function*
 
 ```{r}
 install.packages(setdiff(
