update readme, link to duckspatial

--- a/README.qmd
+++ b/README.qmd
@@ -28,6 +28,10 @@ is_html <- knitr::is_html_output()
 <!-- [![Codecov test coverage](https://codecov.io/gh/e-kotov/ducksf/graph/badge.svg)](https://app.codecov.io/gh/e-kotov/ducksf) -->
 <!-- badges: end -->
 
+::: {.callout-caution}
+This package is not developed anymore, but you can access its lightning fast aerial-weighted interpolation in [`{duckspatial}`](https://cidree.github.io/duckspatial/) via [`duckspatial::ddbs_interpolate_aw()`](https://cidree.github.io/duckspatial/reference/ddbs_interpolate_aw.html) funciton.
+:::
+
 This package provides some alternatives to sf functions, which are implemented using duckdb and geoarrow. So far the only implemented function is areal interpolation working similar to the one found in 'areal' package, but much faster. I have no idea where this project will go, use at your own risk.
 
 `ducksf` provides **fast, DuckDB Spatial–backed spatial data operations** for R,  
@@ -195,6 +199,7 @@ pop_fr <- terra::crop(
 pop_fr <- terra::mask(pop_fr, fr2_mainland)
 
 # project the raster to EPSG:3035 (ETRS89 / LAEA Europe)
+Sys.setenv("PROJ_LIB"="/opt/homebrew/share/proj")
 pop_fr <- terra::project(
   pop_fr,
   "EPSG:3035",
