--- a/README.qmd
+++ b/README.qmd
@@ -29,7 +29,7 @@ is_html <- knitr::is_html_output()
 <!-- badges: end -->
 
 ::: {.callout-caution}
-This package is not developed anymore, but you can access its lightning fast aerial-weighted interpolation in [`{duckspatial}`](https://cidree.github.io/duckspatial/) via [`duckspatial::ddbs_interpolate_aw()`](https://cidree.github.io/duckspatial/reference/ddbs_interpolate_aw.html) funciton.
+This package is not developed anymore, but you can access its lightning fast aerial-weighted interpolation in [`{duckspatial}`](https://cidree.github.io/duckspatial/) via [`duckspatial::ddbs_interpolate_aw()`](https://cidree.github.io/duckspatial/reference/ddbs_interpolate_aw.html) function.
 :::
 
 This package provides some alternatives to sf functions, which are implemented using duckdb and geoarrow. So far the only implemented function is areal interpolation working similar to the one found in 'areal' package, but much faster. I have no idea where this project will go, use at your own risk.
